--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         </tr>
       </table>
       <h1><a href="https://Tasneemha815.github.io">Tasneemha815.github.io</a></h1>
-      <p>ملاحظة تم تعديل اسم هذه الصفحة من home.html الى index.html لكي تقبل الرفع والتشغيل على موقع غيتهب ولكن اسمها لا يزال home.html في ملفات الوظيفة</p>
  
  <img src="image/m1.png" alt="" class="center">
-
+<p dir="rtl">ملاحظة تم تعديل اسم هذه الصفحة من home.html الى index.html لكي تقبل الرفع والتشغيل على موقع github ولكن اسمها لا يزال home.html في ملفات الوظيفة</p>
 </body>
+</html>
