--- a/cars.html
+++ b/cars.html
@@ -18,7 +18,7 @@
             
             <ul class="nav-list">
               <li>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="aboutus.html">About</a>
